syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "TaskService.Tests";

package executions;

service Executions {
  rpc AddExecutor (AddExecutorRequest) returns (AddExecutorReply);
  rpc DeleteExecutor (DeleteExecutorRequest) returns (DeleteExecutorReply);
  rpc GetExecutors (GetExecutorsRequest) returns (GetExecutorsReply);
  rpc GetHistoryByTask (GetHistoryByTaskRequest) returns (GetHistoryByTaskReply);
  rpc GetHistoryByUser (GetHistoryByUserRequest) returns (GetHistoryByUserReply);
  rpc GetStateExecutionsByUser (GetStateExecutionsByUserRequest) returns (GetStateExecutionsByUserReply);
  rpc SetFinishedExecutions (SetFinishedExecutionsRequest) returns (SetFinishedExecutionsReply);
}

message AddExecutorRequest {
  string executor_id = 1;
  string task_id = 2;
}


message AddExecutorReply {
  string task_id = 1;
}


message DeleteExecutorRequest {
  string executor_id = 1;
  string task_id = 2;
}

message DeleteExecutorReply {
  string task_id = 1;
}



message GetExecutorsRequest {
  string task_id = 1;
}

message GetExecutorsReply {
  repeated string executor_ids = 1;
}



message GetHistoryByTaskRequest {
  string task_id = 1;
}

message GetHistoryByTaskReply {
  repeated ExecutionInfo executions = 1;
}



message GetHistoryByUserRequest {
  string executor_id = 1;
}


message GetHistoryByUserReply {
  repeated ExecutionInfo executions = 1;
}



message GetStateExecutionsByUserRequest {
  string executor_id = 1;
}


message GetStateExecutionsByUserReply {
  repeated ExecutionInfo executions = 1;
}



message SetFinishedExecutionsRequest {
  string task_id = 1;
}


message SetFinishedExecutionsReply {
  string task_id = 1;
}



message ExecutionInfo{
  string executor_id = 1;
  string task_id = 2;
  int32 status = 3;
  google.protobuf.Timestamp date_created = 4;
}
